fixed spacing issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6627,3 +6627,9 @@ h1.heading-block--profile {
   min-width: 252px;
   min-height: 227px;
   transition: box-shadow 0.3s ease-in-out; }
+
+.student--info__content {
+  margin-top: 25px; }
+
+.student--info__project {
+  margin-bottom: 40px; }
