--- a/resources/assets/sass/partials/_student-profile.scss
+++ b/resources/assets/sass/partials/_student-profile.scss
@@ -67,3 +67,10 @@ h1.heading-block--profile{
     min-height: 227px;
     transition: box-shadow 0.3s ease-in-out;    
 }
+.student--info__content {
+    margin-top: 25px;
+}
+
+.student--info__project {
+    margin-bottom: 40px    
+}
